--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,5 +22,16 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Oswald", sans-serif;
+}
+
+.cl-internal-1hp5nqm {
+  display: none !important;
+}
+
+.cl-internal-1dauvpw {
+  display: none !important;
+}
+.cl-signUp-start {
+  width: 520px !important;
 }
