--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,13 +25,11 @@ body {
   font-family: "Oswald", sans-serif;
 }
 
+.cl-internal-1dauvpw,
 .cl-internal-1hp5nqm {
   display: none !important;
 }
 
-.cl-internal-1dauvpw {
-  display: none !important;
-}
 .cl-signUp-start {
   width: 520px !important;
 }
